--- a/style/index.css
+++ b/style/index.css
@@ -36,6 +36,7 @@ section {
   box-shadow: 0 0 20px 20px rgba(247, 249, 254, 0.5);
   display: flex;
   flex-grow: 1 ;
+  width: 100%;
   flex-direction: column;
   justify-content: center;
   align-items: center;
@@ -91,9 +92,11 @@ section {
 
 #small-container {
   display: flex;
+  flex: 1 1 0;
   flex-direction: column;
   width: 100%;
-  height: 600px;
+  min-height: fit-content;
+  /* height: 600px; */
   align-items: center;
   justify-content: start;
   padding: 40px 0;
@@ -134,6 +137,7 @@ section {
   padding: 10px;
   border-radius: 10px;
   height: auto;
+  width: 100%;
   justify-content: center;
   align-items: center;
   color: #000;
