--- a/style/style.css
+++ b/style/style.css
@@ -1,5 +1,5 @@
 @import url("https://www.w3schools.com/w3css/4/w3.css");
-@import url('https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap");
 
 :root {
   /* light */
@@ -32,7 +32,7 @@
 * {
   margin: 0;
   padding: 0;
-  box-sizing: border-box;
+  /* box-sizing: border-box; */
 }
 
 html {
@@ -63,16 +63,20 @@ html.dark-mode body {
 }
 
 /* init the font size */
-h1 {
-  font-size: 2rem;
+.super-large-title{
+  font-size: 4rem;
 }
 
-h2 {
+h1 {
   font-size: 1.8rem;
 }
 
-h3 {
+h2 {
   font-size: 1.5rem;
+}
+
+h3 {
+  font-size: 1.4rem;
 }
 
 p {
@@ -120,5 +124,23 @@ a {
 
   &:hover {
     color: var(--accent);
+  }
+}
+
+@media (min-width: 768) {
+  h1 {
+    font-size: 2rem;
+  }
+
+  h2 {
+    font-size: 1.8rem;
+  }
+
+  h3 {
+    font-size: 1.5rem;
+  }
+
+  p {
+    font-size: 1.2rem;
   }
 }
